objects/Class__c/fields/Class_room__c.field-meta.xml
<CustomField>
    <fullName>Class_room__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Class room</label>
    <referenceTo>Class_room__c</referenceTo>
    <relationshipLabel>Classes</relationshipLabel>
    <relationshipName>Classes</relationshipName>
    <type>Lookup</type>
</CustomField>