objects/Class__c/fields/Number_of_session__c.field-meta.xml
<CustomField>
    <fullName>Number_of_session__c</fullName>
    <label>Number of session</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>