objects/Class__c/fields/Planned_end_date__c.field-meta.xml
<CustomField>
    <fullName>Planned_end_date__c</fullName>
    <label>Planned end date</label>
    <type>Date</type>
</CustomField>