objects/Class__c/fields/Planned_start_date__c.field-meta.xml
<CustomField>
    <fullName>Planned_start_date__c</fullName>
    <label>Planned start date</label>
    <type>Date</type>
</CustomField>