objects/Class__c/fields/Timeslot__c.field-meta.xml
<CustomField>
    <fullName>Timeslot__c</fullName>
    <label>Timeslot</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Timeslot</valueSetName>
    </valueSet>
</CustomField>